--- a/public/index.html
+++ b/public/index.html
@@ -28,14 +28,14 @@
     <script src="https://kit.fontawesome.com/a81368914c.js"></script>
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-P8EVSKJD4B"></script>
+    <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=G-P8EVSKJD4B"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
 
       gtag('config', 'G-P8EVSKJD4B');
-    </script>
+    </script> -->
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
